PYIC-8356: Update sharedStubAsyncCriResponseQueuePermission

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -2323,7 +2323,7 @@ Resources:
                 - sqs:GetQueueAttributes
                 - sqs:ReceiveMessage
               Resource: !If
-                - IsDevOrBuild
+                - IsDevOrBuildOrStaging
                 - !If
                   - IsDevelopment
                   - !Sub
