--- a/openAPI/core-back-external.yaml
+++ b/openAPI/core-back-external.yaml
@@ -183,6 +183,23 @@ paths:
             responseTemplates:
               application/json: "{\"healthcheck\": \"ok\"}"
 
+  /journey-transitions:
+    get:
+      description: "Endpoint for fetching journey transitions for journey map analysis"
+      responses:
+        200:
+          description: "State journey transitions"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/journeyTransitionsResponse"
+      x-amazon-apigateway-integration:
+        type: "aws_proxy"
+        httpMethod: "GET"
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FetchJourneyTransitionsFunction.Arn}:live/invocations
+        passthroughBehavior: "when_no_match"
+
 components:
   securitySchemes:
     bearerAuth:
@@ -360,3 +377,26 @@ components:
       required:
         - healthcheck
       additionalProperties: false
+
+    journeyTransitionsResponse:
+      type: array
+      items:
+        type: object
+        properties:
+          fromJourney:
+            type: string
+          from:
+            type: string
+          toJourney:
+            type: string
+          to:
+            type: string
+          count:
+            type: integer
+        required:
+          - fromJourney
+          - from
+          - toJourney
+          - to
+          - count
+        additionalProperties: false
