--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -2945,6 +2945,13 @@ Resources:
                 - logs:StartQuery
                 - logs:GetQueryResults
               Resource: !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/process-journey-event-${Environment}
+      Events:
+        IPVCoreExternalAPIJourneyTransitions:
+          Type: Api
+          Properties:
+            RestApiId: !Ref IPVCoreExternalAPI
+            Path: /journey-transitions
+            Method: GET
       AutoPublishAlias: live
 
   FetchJourneyTransitionsFunctionLogGroup:
