PYIC-8361: add disableStrategicApp feature set and set disableStrategicApp to true

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -357,7 +357,7 @@ core:
   featureFlags:
     resetIdentity: false
     pendingF2FResetEnabled: false
-    strategicAppEnabled: false
+    strategicAppEnabled: true
     internationalAddressEnabled: true
     inheritedIdentity: true
     repeatFraudCheckEnabled: true
@@ -392,6 +392,9 @@ core:
     strategicApp:
       featureFlags:
         strategicAppEnabled: true
+    disableStrategicApp:
+      featureFlags:
+        strategicAppEnabled: false
     inheritedIdentity:
       featureFlags:
         inheritedIdentity: true
