BAU Mark switched-on CRIs 'enabled' across all envs
DCMAW Async and NINO CRIs are in use in routes switched on up to prod but their CRI 'enabled' flag has no effect
Set to true anyway to avoid any confusion (especially in the journey map tool)

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -148,7 +148,7 @@ core:
     dcmawAsync:
       id: dcmawAsync
       name: "Document Checking - Mobile App and Web - Async"
-      enabled: "false"
+      enabled: "true"
       unavailable: false # temporarily unavailable
       allowedSharedAttributes: "name,birthDate,address"
       activeConnection: "stub"
@@ -285,7 +285,7 @@ core:
     nino:
       id: nino
       name: NINO
-      enabled: "false"
+      enabled: "true"
       unavailable: false # temporarily unavailable
       allowedSharedAttributes: "name,birthDate,address"
       activeConnection: "stub"
