--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -466,6 +466,9 @@ Resources:
                 - 'execute-api:/*'
       StageName: !Sub ${Environment}
       TracingEnabled: true
+      Tags:
+        FMSRegionalPolicy: false
+        CustomPolicy: true
       AccessLogSetting:
         DestinationArn: !GetAtt IPVCorePrivateAPILogGroup.Arn
         Format: >-
@@ -870,6 +873,9 @@ Resources:
           Name: "AWS::Include"
           Parameters:
             Location: "../openAPI/core-back-analytics.yaml"
+      Tags:
+        FMSRegionalPolicy: false
+        CustomPolicy: true
       AccessLogSetting:
         DestinationArn: !GetAtt IPVCoreAnalyticsAPILogGroup.Arn
         Format: >-
