Revert "PYIC-8582: switch to AWS CRT-based http client"
This reverts commit 87cb15cebbd9c09594ce4ab4437a3d4653a7f55e.

--- a/libs/cimit-service/build.gradle
+++ b/libs/cimit-service/build.gradle
@@ -12,7 +12,7 @@ configurations {
 dependencies {
 	implementation platform(libs.awsSdkBom),
 			libs.apacheHttpCore,
-			libs.awsSdkCrtClient,
+			libs.awsSdkUrlConnectionClient,
 			libs.jacksonDatabind,
 			libs.powertoolsLogging,
 			libs.powertoolsParameters,
