--- a/libs/audit-service/build.gradle
+++ b/libs/audit-service/build.gradle
@@ -11,7 +11,7 @@ configurations {
 
 dependencies {
 	implementation platform(libs.awsSdkBom),
-			libs.awsSdkCrtClient,
+			libs.awsSdkUrlConnectionClient,
 			libs.powertoolsLogging,
 			libs.powertoolsParameters,
 			project(":libs:common-services"),
