--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -47,6 +47,11 @@ states:
       next:
         targetState: POST_APP_DOC_CHECK_INTERNATIONAL_SUCCESS_PAGE
 
+  IDENTITY_DOCUMENT_START:
+    events:
+      next:
+        targetState: IDENTITY_START_PAGE
+
   # Parent states
 
   CRI_STATE:
@@ -342,7 +347,7 @@ states:
             targetState: ERROR
       f2f:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
@@ -429,7 +434,7 @@ states:
     exitEvents:
       next:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
       fraud-fail-with-no-ci:
         targetJourney: FAILED
         targetState: FAILED
@@ -526,7 +531,7 @@ states:
     events:
       f2f:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
@@ -593,7 +598,7 @@ states:
     events:
       f2f:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
@@ -745,7 +750,7 @@ states:
             targetState: ERROR
       f2f:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
@@ -758,7 +763,7 @@ states:
     events:
       next:
         targetJourney: F2F_HAND_OFF
-        targetState: START
+        targetState: START_MEDIUM_CONFIDENCE
       end:
         targetJourney: INELIGIBLE
         targetState: INELIGIBLE
