PYIC-8298: Allow InitialiseIpvSession to decrypt with any KMS key

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -1345,7 +1345,7 @@ Resources:
                 - 'kms:Decrypt'
                 - 'kms:GenerateDataKey'
               Resource:
-                - !ImportValue CoreEncryptionKeyArn
+                - !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/*"
             - Sid: kmsAuditEventQueueEncryptionKeyPermission
               Effect: Allow
               Action:
